[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "data analysis"
authors = ["Jen Searing <jsearing@stevens.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.20.0"
notebook = "^6.5.2"
spotipy = "^2.22.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
